--- a/styles/cstm-listings.sty
+++ b/styles/cstm-listings.sty
@@ -1,8 +1,13 @@
-\definecolor{twgray}{rgb}{0.9,0.9,0.9}
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{styles/cstm-listings}[2019/07/10 v0.01 cstm listing
+                                        definitions]
 
+\RequirePackage{listings}
+\RequirePackage[svgnames]{xcolor}
+\RequirePackage{xparse}
 
-\lstdefinestyle{tw-latex-sty} {
-    backgroundcolor=\color{twgray},  % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
+\lstdefinestyle{cstm-lists-latex-sty} {
+    backgroundcolor=\color{Azure},  % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
     basicstyle=\footnotesize,        % the size of the fonts that are used for the code
     breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
     breaklines=true,                 % sets automatic line breaking
