--- a/tw-scrbook-template/tw-scrbook-template.bib
+++ b/tw-scrbook-template/tw-scrbook-template.bib
@@ -4,87 +4,28 @@
   author     = {Kohm, M.},
   title      = {{KOMA-Script}},
   year       = {2019},
-  date       = {2019-07-10},
+  date       = {2019-02-01},
   url        = {http://mirrors.ibiblio.org/CTAN/macros/latex/contrib/koma-script/doc/scrguide.pdf},
   titleaddon = {ein wandelbares LATEX 2-Paket},
+  urldate    = {2019-07-17},
 }
 
 @WWW{CEU01,
-  author       = {CEU},
+  author       = {{Central European University}},
   title        = {{TeX in CEU}},
-  date         = {2019-07-10},
   url          = {http://www.personal.ceu.hu/tex/},
   organization = {Central European University},
+  urldate      = {2019-07-17},
 }
 
-@PhdThesis{LOS03,
-  author    = {Loose, H.},
-  title     = {{Dreidimensionale Stra{\ss}enmodelle f{\"u}r Fahrerassistenzsysteme auf Landstra{\ss}en}},
-  year      = {2012},
-  isbn      = {9783866449428},
-  url       = {http://books.google.de/books?id=ssDMuLn4kdgC},
-  publisher = {KIT Scientific Publishing},
-  school    = {Karlsruher Institut für Technologie, Institut für Mess- und Regelungstechnik},
-  series    = {Schriftenreihe},
-}
-
-@Article{SOR01,
-  author    = {Sorenson, H.W.},
-  title     = {Least-squares estimation: from Gauss to Kalman},
-  journal   = {Spectrum, IEEE},
-  year      = {1970},
-  volume    = {7},
-  number    = {7},
-  pages     = {63-68},
-  issn      = {0018-9235},
-  doi       = {10.1109/MSPEC.1970.5213471},
-  keywords  = {Books;Estimation theory;Extraterrestrial measurements;Gaussian processes;Kalman filters;Least squares approximation;Least squares methods;Mathematics;Orbits;Planets},
-  owner     = {winklt},
-  timestamp = {2014.07.21},
-}
-
-@InProceedings{GER01,
-  author    = {Gern, A. and Franke, U. and Levi, P.},
-  title     = {Advanced Lane Recognition - Fusing Vision and Radar},
-  booktitle = {Intelligent Vehicles Symposium, 2000. IV 2000. Proceedings of the IEEE},
-  year      = {2000},
-  pages     = {45-51},
-  doi       = {10.1109/IVS.2000.898316},
-  keywords  = {Kalman filters;automobiles;computer vision;pattern recognition;road vehicle radar;sensor fusion;transport control;Kalman filter;advanced lane recognition;data fusion;lateral position;observed cars;radar;road structures;vision-based lane recognition systems;weather;Augmented virtuality;Equations;Kalman filters;Position measurement;Radar tracking;Road transportation;Surface fitting;Surface texture;Vehicle detection;Weather forecasting},
-}
-
-@InProceedings{GER02,
-  author    = {Gern, A. and Franke, U. and Levi, P. and Winkler, T. and Müller, X. and Maier, S. and Nachname, V.},
-  title     = {Advanced Lane Recognition - Fusing Vision and Radar 2},
-  booktitle = {Intelligent Vehicles Symposium, 2000. IV 2000. Proceedings of the IEEE},
-  year      = {2000},
-  pages     = {45-51},
-  doi       = {10.1109/IVS.2000.898316},
-  keywords  = {Kalman filters;automobiles;computer vision;pattern recognition;road vehicle radar;sensor fusion;transport control;Kalman filter;advanced lane recognition;data fusion;lateral position;observed cars;radar;road structures;vision-based lane recognition systems;weather;Augmented virtuality;Equations;Kalman filters;Position measurement;Radar tracking;Road transportation;Surface fitting;Surface texture;Vehicle detection;Weather forecasting},
-}
-
-@Book{BAL02,
-  author    = {Bald, J.S. and Giesa, S.},
-  title     = {Hinweise f{\"u}r das Anbringen von Verkehrszeichen und Verkehrseinrichtungen HAV: verkehrstechnischer Kommentar mit Fortschreibung der HAV-Q, 3. Auflage},
-  year      = {2002},
-  edition   = {12. Auflage},
-  publisher = {Kirschbaum Verlag Bonn},
-  isbn      = {9783781215801},
-  url       = {http://books.google.de/books?id=2iJZPQAACAAJ},
-  owner     = {winklt},
-  timestamp = {2014.08.01},
-}
-
-@Book{BAL01,
-  author    = {Bald, J.S. and Giesa, S.},
-  title     = {GHinweise f{\"u}r das Anbringen von Verkehrszeichen und Verkehrseinrichtungen HAV: verkehrstechnischer Kommentar mit Fortschreibung der HAV-Q, 2. Auflage},
-  year      = {2003},
-  edition   = {12. Auflage},
-  publisher = {Kirschbaum Verlag Bonn},
-  isbn      = {9783781215801},
-  url       = {http://books.google.de/books?id=2iJZPQAACAAJ},
-  owner     = {winklt},
-  timestamp = {2014.08.01},
+@WWW{TEXWELT01,
+  author     = {Texwelt},
+  title      = {{Was ist der Unterschied zwischen \textbackslash, \textbackslash newline und \textbackslash linebreak?}},
+  year       = {2019},
+  date       = {2014-03-25},
+  url        = {https://texwelt.de},
+  titleaddon = {ein wandelbares LATEX 2-Paket},
+  urldate    = {2019-07-17},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
