--- a/templates/tw-scrbook-template/main.tex
+++ b/templates/tw-scrbook-template/main.tex
@@ -7,10 +7,12 @@
 \include{abstract}
 
 \tableofcontents
-\clearpage
 
 \include{chapter1/documentinfos}
-\include{chapter2/makefile}
-\include{chapter3/textexample}
+\include{chapter2/templatestructure}
+\include{chapter3/makefile}
+\include{chapter4/textexample}
 \include{references}
 \include{listings}
+
+\printglossary[type=acronym,title=Abbreviations \& Terms]
