--- a/templates/tw-scrbook-template/tw-scrbook-template.bib
+++ b/templates/tw-scrbook-template/tw-scrbook-template.bib
@@ -1,6 +1,6 @@
 % Encoding: UTF-8
 
-@WWW{KOH01,
+@WWW{KOH19,
   author     = {Kohm, M.},
   title      = {{KOMA-Script}},
   year       = {2019},
@@ -18,7 +18,7 @@
   urldate      = {2019-07-17},
 }
 
-@WWW{TEXWELT01,
+@WWW{TEXWELT14,
   author     = {Texwelt},
   title      = {{Was ist der Unterschied zwischen \textbackslash, \textbackslash newline und \textbackslash linebreak?}},
   year       = {2019},
@@ -26,6 +26,14 @@
   url        = {https://texwelt.de},
   titleaddon = {ein wandelbares LATEX 2-Paket},
   urldate    = {2019-07-17},
+}
+
+@WWW{OVE01,
+  author       = {Overleaf},
+  title        = {Documentation},
+  url          = {https://www.overleaf.com/learn},
+  organization = {Overleaf},
+  urldate      = {2019-08-07},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
